# wwwroot/swagger/v1/swagger.json
@@ -1,13 +1,13 @@
 {
-  "x-generator": "NSwag v13.11.3.0 (NJsonSchema v10.4.4.0 (Newtonsoft.Json v13.0.0.0))",
+  "x-generator": "NSwag v13.13.2.0 (NJsonSchema v10.5.2.0 (Newtonsoft.Json v13.0.0.0))",
   "swagger": "2.0",
   "info": {
     "title": "MyServiceBus",
-    "version": "1.0.0"
+    "version": "***VERSION***"
   },
   "host": "***HOST***",
   "schemes": [
-    "***SCHEME***"
+    "***SHEME***"
   ],
   "paths": {
     "/Connections/KickTcpConnection": {
@@ -165,7 +165,7 @@
         }
       }
     },
-    "/Monitoring": {
+    "/Status": {
       "get": {
         "tags": [
           "Monitoring"
@@ -216,29 +216,30 @@
         }
       }
     },
-    "/Monitoring/Snapshots": {
+    "/Queues": {
       "get": {
         "tags": [
-          "Monitoring"
+          "Queues"
         ],
-        "operationId": "Monitoring_Snapshots",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
+        "operationId": "Queues_GetQueues",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "topicId",
+            "in": "query",
+            "x-nullable": true
+          }
         ],
         "responses": {
           "200": {
-            "x-nullable": false,
+            "x-nullable": true,
             "description": "",
             "schema": {
-              "$ref": "#/definitions/SnapshotsContract"
+              "type": "file"
             }
           }
         }
-      }
-    },
-    "/Queues": {
+      },
       "delete": {
         "tags": [
           "Queues"
@@ -294,6 +295,37 @@
             "in": "query",
             "format": "int64",
             "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": true,
+            "description": "",
+            "schema": {
+              "type": "file"
+            }
+          }
+        }
+      }
+    },
+    "/Queues/PushMessageAgain": {
+      "post": {
+        "tags": [
+          "Queues"
+        ],
+        "operationId": "Queues_PushMessageAgain",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "topicId",
+            "in": "query",
+            "x-nullable": true
+          },
+          {
+            "type": "string",
+            "name": "queueId",
+            "in": "query",
+            "x-nullable": true
           }
         ],
         "responses": {
@@ -405,286 +437,283 @@
   "definitions": {
     "MonitoringModel": {
       "type": "object",
-      "required": [
-        "tcpConnections"
-      ],
       "properties": {
         "topics": {
+          "$ref": "#/definitions/TopicsMonitoringModel"
+        },
+        "queues": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/QueuesMonitoringModel"
+          }
+        },
+        "sessions": {
+          "$ref": "#/definitions/SessionsMonitoringModel"
+        },
+        "system": {
+          "$ref": "#/definitions/SystemStatusMonitoringModel"
+        }
+      }
+    },
+    "TopicsMonitoringModel": {
+      "type": "object",
+      "required": [
+        "snapshotId"
+      ],
+      "properties": {
+        "snapshotId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "items": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/TopicMonitoringModel"
           }
-        },
-        "connections": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/ConnectionModel"
-          }
-        },
-        "queueToPersist": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/QueueToPersist"
-          }
-        },
-        "tcpConnections": {
-          "type": "integer",
-          "format": "int32"
         }
       }
     },
     "TopicMonitoringModel": {
       "type": "object",
       "required": [
-        "msgPerSec",
-        "requestsPerSec",
-        "size",
-        "messageId"
+        "messageId",
+        "packetPerSec",
+        "messagesPerSec",
+        "persistSize"
       ],
       "properties": {
         "id": {
           "type": "string"
         },
-        "msgPerSec": {
+        "messageId": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "packetPerSec": {
           "type": "integer",
           "format": "int32"
         },
-        "requestsPerSec": {
+        "messagesPerSec": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "persistSize": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "publishHistory": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "pages": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/TopicPageModel"
+          }
+        }
+      }
+    },
+    "TopicPageModel": {
+      "type": "object",
+      "required": [
+        "id",
+        "percent",
+        "size"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "percent": {
           "type": "integer",
           "format": "int32"
         },
         "size": {
           "type": "integer",
           "format": "int64"
-        },
-        "messageId": {
+        }
+      }
+    },
+    "QueuesMonitoringModel": {
+      "type": "object",
+      "required": [
+        "snapshotId"
+      ],
+      "properties": {
+        "snapshotId": {
           "type": "integer",
-          "format": "int64"
+          "format": "int32"
         },
-        "consumers": {
+        "queues": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/ConsumerModel"
-          }
-        },
-        "publishers": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int64"
-          }
-        },
-        "cachedPages": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int64"
-          }
-        },
-        "messagesPerSecond": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int32"
+            "$ref": "#/definitions/QueueMonitoringModel"
           }
         }
       }
     },
-    "ConsumerModel": {
+    "QueueMonitoringModel": {
       "type": "object",
       "required": [
         "queueType",
-        "connections",
-        "queueSize",
-        "leasedAmount"
+        "size"
       ],
       "properties": {
-        "queueId": {
+        "id": {
           "type": "string"
         },
         "queueType": {
           "type": "integer",
-          "format": "int32"
+          "format": "byte"
         },
-        "connections": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "queueSize": {
+        "size": {
           "type": "integer",
           "format": "int64"
         },
-        "readySlices": {
+        "data": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/QueueSlice"
-          }
-        },
-        "leasedAmount": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "executionDuration": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int32"
+            "$ref": "#/definitions/QueueIndexRangeMonitoringModel"
           }
         }
       }
     },
-    "QueueSlice": {
+    "QueueIndexRangeMonitoringModel": {
       "type": "object",
       "required": [
-        "from",
-        "to"
+        "fromId",
+        "toId"
       ],
       "properties": {
-        "from": {
+        "fromId": {
           "type": "integer",
           "format": "int64"
         },
-        "to": {
+        "toId": {
           "type": "integer",
           "format": "int64"
         }
       }
     },
-    "ConnectionModel": {
-      "allOf": [
-        {
-          "$ref": "#/definitions/UnknownConnectionModel"
-        },
-        {
-          "type": "object",
-          "required": [
-            "protocolVersion",
-            "publishPacketsPerSecond",
-            "deliveryPacketsPerSecond"
-          ],
-          "properties": {
-            "name": {
-              "type": "string"
-            },
-            "protocolVersion": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "publishPacketsPerSecond": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "deliveryPacketsPerSecond": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "topics": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/TopicConnectionHubModel"
-              }
-            },
-            "queues": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/ConnectionQueueInfoModel"
-              }
-            }
-          }
-        }
-      ]
-    },
-    "TopicConnectionHubModel": {
+    "SessionsMonitoringModel": {
       "type": "object",
       "required": [
-        "light"
+        "snapshotId"
+      ],
+      "properties": {
+        "snapshotId": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SessionMonitoringModel"
+          }
+        }
+      }
+    },
+    "SessionMonitoringModel": {
+      "type": "object",
+      "required": [
+        "id",
+        "readSize",
+        "writtenSize",
+        "readPerSec",
+        "writtenPerSec"
       ],
       "properties": {
         "id": {
-          "type": "string"
-        },
-        "light": {
           "type": "integer",
-          "format": "int32"
-        }
-      }
-    },
-    "ConnectionQueueInfoModel": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "leased": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/QueueSlice"
-          }
-        }
-      }
-    },
-    "UnknownConnectionModel": {
-      "type": "object",
-      "required": [
-        "sentBytes",
-        "receivedBytes"
-      ],
-      "properties": {
-        "id": {
-          "type": "string"
+          "format": "int64"
         },
         "ip": {
           "type": "string"
         },
-        "connectedTimeStamp": {
+        "version": {
           "type": "string"
         },
-        "sentBytes": {
+        "name": {
+          "type": "string"
+        },
+        "connected": {
+          "type": "string"
+        },
+        "lastIncoming": {
+          "type": "string"
+        },
+        "readSize": {
           "type": "integer",
           "format": "int64"
         },
-        "lastSendDuration": {
-          "type": "string"
-        },
-        "receivedBytes": {
+        "writtenSize": {
           "type": "integer",
           "format": "int64"
         },
-        "sentTimeStamp": {
-          "type": "string"
+        "readPerSec": {
+          "type": "integer",
+          "format": "int64"
         },
-        "receiveTimeStamp": {
-          "type": "string"
+        "writtenPerSec": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "publishers": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "integer",
+            "format": "byte"
+          }
+        },
+        "subscribers": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SubscriberMonitoringModel"
+          }
         }
       }
     },
-    "QueueToPersist": {
+    "SubscriberMonitoringModel": {
       "type": "object",
       "required": [
-        "count"
+        "active"
       ],
       "properties": {
         "topicId": {
           "type": "string"
         },
-        "count": {
+        "queueId": {
+          "type": "string"
+        },
+        "active": {
           "type": "integer",
-          "format": "int32"
+          "format": "byte"
+        },
+        "deliveryHistory": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int32"
+          }
         }
       }
     },
-    "SnapshotsContract": {
+    "SystemStatusMonitoringModel": {
       "type": "object",
       "required": [
-        "topicSnapshotId",
-        "tcpConnections"
+        "usedmem",
+        "totalmem"
       ],
       "properties": {
-        "topicSnapshotId": {
+        "usedmem": {
           "type": "integer",
           "format": "int32"
         },
-        "tcpConnections": {
+        "totalmem": {
           "type": "integer",
           "format": "int32"
         }
